@@ -34,6 +34,12 @@ BINDING_HEADER_ELVUI = GetAddOnMetadata(..., "Title")
 --Modules List
 E["RegisteredModules"] = {}
 
+local registry = {}
+
+function E:RegisterDropdownButton(name, callback)
+  registry[name] = callback or true
+end
+
 function E:Print(msg)
 	print(self["media"].hexvaluecolor..'ElvUI:|r', msg)
 end
@@ -594,6 +600,23 @@ function E:UpdateAll()
 	collectgarbage('collect');
 end
 
+local function showMenu(dropdownMenu, which, unit, name, userData, ...)
+  for i=1,UIDROPDOWNMENU_MAXBUTTONS do
+    local button = _G["DropDownList" .. UIDROPDOWNMENU_MENU_LEVEL .. "Button" .. i];
+
+    local f = registry[button.value]
+    -- Patch our handler function back in
+    if f then
+      button.func = UnitPopupButtons[button.value].func
+      if type(f) == "function" then
+        f(dropdownMenu, button)
+      end
+    end
+  end
+end
+
+hooksecurefunc("UnitPopup_ShowMenu", showMenu)
+
 function E:Initialize()
 	self.data = LibStub("AceDB-3.0"):New("ElvData", self.DF, true);
 	self.data.RegisterCallback(self, "OnProfileChanged", "UpdateAll")
@@ -704,7 +727,6 @@ function E:ResetAllUI()
 		E:SetupLayout(E.db.layoutSet)
 	end
 end
-
 
 function E:ResetUI(...)
 	if InCombatLockdown() then E:Print(ERR_NOT_IN_COMBAT) return end
