@@ -8,6 +8,7 @@
 *Add skin for Addon Control Panel (Credit: Camealion)
 *Add an option under the skada skin section of the config to control the bar height of the individual bars.
 *Add skin for the Blizzard Guild Invite Frame.
+*Add a button to the right click menu of someones name in chat. This allows you to copy that specific line of chat of the person you right clicked.
 
 [b]General Changes[/b]
 *The World Map Alpha setting should properly change Opacity, it was working the opposite of how it was intended before. 100% Opacity means the frame is fully faded away now.
